--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
 
     <title>The Reef</title>
     <style>
-      body {
+      body {font-family: "Times", "arial", "serif";
+            background-color: grey;
       }
-      header{}
-      footer{}
-      a{}
+      header{font-family: "Fantasy","Roboto","Oswald";
+             background-color: black:}
+      footer{font-fsmily: "Times","Sans-serif","arial";
+            background-color: grey}
+      a{
+        color='white'}
     </style>
   </head>
   <body>
-    <header></header>
-    <footer></footer>
+    <header>
+      <p> FlOwEtRy </p>
+    </header>
+    <footer><p> winter spring summer and fall </p>
+    </footer>
   </body>
 </html>
