--- a/index.html
+++ b/index.html
@@ -5,22 +5,32 @@
 
     <title>The Reef</title>
     <style>
-      body {font-family: "Times", "arial", "serif";
-            background-color: grey;
+      body {
+        font-family: "Times", "arial", "serif";
+        background-color: grey;
+       
       }
-      header{font-family: "Fantasy","Roboto","Oswald";
-             background-color: black:}
-      footer{font-fsmily: "Times","Sans-serif","arial";
-            background-color: grey}
+      header{
+        font-family: "Fantasy", "Roboto", "Oswald";
+        background-color: black;
+        height: 5vh;
+        width: 100%;
+        position: fixed;}
+      footer{
+        font-fsmily: "Times", "Sans-serif", "arial";
+        background-color: grey;
+        width: 100%;
+        height: 15vh;
+        position: fixed;}
       a{
-        color='white'}
+        color= white;}
     </style>
   </head>
   <body>
     <header>
       <p> FlOwEtRy </p>
     </header>
-    <footer><p> winter spring summer and fall </p>
+    <footer><p> Winter Spring; Summer, and Fall </p>
     </footer>
   </body>
 </html>
