--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>The Reef</title>
+<html>
+  <head> 
     <style>
       body {
         font-family: "Times", "arial", "serif";
         background-color: grey;
-       
+        padding-top: 5vh;
+        padding-bottom: 15vh;
       }
-      header{
+      header {
         font-family: "Fantasy", "Roboto", "Oswald";
         background-color: black;
         height: 5vh;
         width: 100%;
-        position: fixed;}
-      footer{
-        font-fsmily: "Times", "Sans-serif", "arial";
+        position: fixed;
+        top: 0;
+      }
+      footer {
+        font-family: "Times", "Sans-serif", "arial";
         background-color: grey;
         width: 100%;
         height: 15vh;
-        position: fixed;}
-      a{
-        color= white;}
+        position: fixed;
+        bottom: 0;
+      }
+      a {
+        color: olive;
+      }
     </style>
   </head>
   <body>
     <header>
-      <p> FlOwEtRy </p>
+    <p> f L o E t R y </p>
     </header>
-    <footer><p> Winter Spring; Summer, and Fall </p>
-    </footer>
   </body>
+
 </html>
