--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <style>
       body {
         font-family: "Times", "arial", "serif";
-        background-color: grey;
+        background-color: black;
         padding-top: 5vh;
         padding-bottom: 15vh;
       }
       header {
         font-family: "Fantasy", "Roboto", "Oswald";
-        background-color: black;
+        background-color: ash;
         height: 5vh;
         width: 100%;
         position: fixed;
@@ -29,10 +29,11 @@
       }
     </style>
   </head>
-  <body>
     <header>
     <p> f L o E t R y </p>
     </header>
-  </body>
+    <body>
+      <p> Winter Spring; Summer, & Fall</p>
+    </body>
 
 </html>
