--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-
-<html>
+<html lang="en">
   <head> 
+    <meta charset= "UTF-8">
+    <meta name="viewport" content="width="device-width, intial-scale=1.0">
+    <title> The Reef </title>
     <style>
       body {
         font-family: "Fantasy", "Roboto", "Oswald";
@@ -33,7 +35,9 @@
     <p> f L o E t R y </p>
     </header>
     <body>
-      <p> Winter Spring; Summer, & Fall</p>
+      <p>
+      <a href= "clink.html">Winter </a><a href="clink.html">Spring;</a> 
+      <a href="clink.html">Summer,</a><a href="clink.html"> & Fall </a></p>
     </body>
 
 </html>
