--- a/clink.html
+++ b/clink.html
@@ -1,1 +1,33 @@
-
+<html lang="en">
+  <head> 
+    <meta charset= "UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Frosty Flakes </title>
+    <style>
+      body {
+        font-family: "Fantasy", "Roboto", "Oswald";
+        background-color: black;
+        padding-top: 5vh;
+        padding-bottom: 15vh;
+      }
+      header {
+        font-family: "Times", "arial", "serif";
+        background-color: ash;
+        height: 5vh;
+        width: 100%;
+        position: fixed;
+        top: 0;
+      }
+      footer {
+        font-family: "Times", "Sans-serif", "arial";
+        background-color: grey;
+        width: 100%;
+        height: 15vh;
+        position: fixed;
+        bottom: 0;
+      }
+      a {
+        color: olive;
+      }
+    </style>
+  </head>
