--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </header>
     <body>
       <p>
-      <a href= "clink.html">Winter </a><a href="clink.html">Spring;</a> 
-      <a href="clink.html">Summer,</a><a href="clink.html"> & Fall </a></p>
+      <a href= "clink.html" target="_blank">Winter </a><a href="clink.html" target="_blank">Spring;</a> 
+      <a href="clink.html" target="_blank">Summer,</a><a href="clink.html" target="_blank"> & Fall </a></p>
     </body>
 
 </html>
