--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
       header {
         font-family: "Times", "arial", "serif";
-        background-color: ash;
+        background-color: #B2BEB5;
         height: 5vh;
         width: 100%;
         position: fixed;
