--- a/clink.html
+++ b/clink.html
@@ -6,13 +6,13 @@
     <style>
       body {
         font-family: "Fantasy", "Roboto", "Oswald";
-        background-color: black;
+        background-color: silver;
         padding-top: 5vh;
         padding-bottom: 15vh;
       }
       header {
         font-family: "Times", "arial", "serif";
-        background-color: ash;
+        background-color: #B2BEB5;
         height: 5vh;
         width: 100%;
         position: fixed;
@@ -20,7 +20,7 @@
       }
       footer {
         font-family: "Times", "Sans-serif", "arial";
-        background-color: grey;
+        background-color: #B2BEB5;
         width: 100%;
         height: 15vh;
         position: fixed;
