--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <title> The Reef </title>
     <style>
       body {
+        text-align: center;
         font-family: "Fantasy", "Roboto", "Oswald";
-        background-color: black;
+        background-color: gray;
         padding-top: 5vh;
         padding-bottom: 15vh;
       }
       header {
+        text-align: center;
         font-family: "Times", "arial", "serif";
         background-color: #B2BEB5;
         height: 5vh;
@@ -20,7 +22,7 @@
       }
       footer {
         font-family: "Times", "Sans-serif", "arial";
-        background-color: grey;
+        background-color: brown;
         width: 100%;
         height: 15vh;
         position: fixed;
@@ -39,5 +41,8 @@
       <a href= "clink.html" target="_blank">Winter </a><a href="clink.html" target="_blank">Spring;</a> 
       <a href="clink.html" target="_blank">Summer,</a><a href="clink.html" target="_blank"> & Fall </a></p>
     </body>
+  <footer>
+    
+  </footer>
 
 </html>
