--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       body {
         text-align: center;
         font-family: "Fantasy", "Roboto", "Oswald";
-        background-color: gray;
+        background-color: #A9A9A9;
         padding-top: 5vh;
         padding-bottom: 15vh;
       }
@@ -22,14 +22,14 @@
       }
       footer {
         font-family: "Times", "Sans-serif", "arial";
-        background-color: brown;
+        background-color: #654321;
         width: 100%;
         height: 15vh;
         position: fixed;
         bottom: 0;
       }
       a {
-        color: olive;
+        color: black;
       }
     </style>
   </head>
