--- a/clink.html
+++ b/clink.html
@@ -5,14 +5,15 @@
     <title> Frosty Flakes </title>
     <style>
       body {
+        text-align: center;
         font-family: "Fantasy", "Roboto", "Oswald";
-        background-color: silver;
+        background-color: #C0C0C0;
         padding-top: 5vh;
         padding-bottom: 15vh;
       }
       header {
         font-family: "Times", "arial", "serif";
-        background-color: #B2BEB5;
+        background-color: #D3D3D3;
         height: 5vh;
         width: 100%;
         position: fixed;
@@ -20,7 +21,7 @@
       }
       footer {
         font-family: "Times", "Sans-serif", "arial";
-        background-color: #B2BEB5;
+        background-color: #A9A9A9;
         width: 100%;
         height: 15vh;
         position: fixed;
@@ -29,5 +30,14 @@
       a {
         color: olive;
       }
+      .pfp{
+        width: 300px;
+        border-radius: 10px;
+        border: 5px black:
+      }
     </style>
   </head>
+<body>
+  <img src="flower$.jpeg" alt+"sumnSofar" class="pfp"></img>
+</body>
+</html>
