--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
         text-align: center;
         font-family: "Times", "arial", "serif";
         background-color: #B2BEB5;
-        height: 5vh;
+        height: 8vh;
         width: 100%;
         position: fixed;
         top: 0;
       }
       footer {
+        text-align: center;
         font-family: "Times", "Sans-serif", "arial";
         background-color:#654321;
         width: 100%;
@@ -31,16 +32,21 @@
       a {
         color: black;
       }
+      .underline {
+        text-decoration: underline;
+        text-decoration-color: gold;
+        text-decoration-thickness: from-font;
+      }
     </style>
   </head>
     <header>
-    <p> 81089FBF92<p2 class="underline"> f </p2>
-      C26CA186B <p2 class="underline"> L </p2>
-      701F0F50B784 <p2 class="underline"> o </p2> 
-      4F699E3B <p2 class="underline"> E </p2> 
-      A7415C26 <p2 class="underline"> t </p2> 
-      CFA2C281 <p2 class="underline"> R </p2> 
-      178A7 <p2 class="underline"> y </p2> 107E</p>
+    <p> 81089FBF92<span class="underline"> f </span>
+      C26CA186B <span class="underline"> L </span>
+      701F0F50B784 <span class="underline"> o </span> 
+      4F699E3B <span class="underline"> E </span> 
+      A7415C26 <span class="underline"> t </span> 
+      CFA2C281 <span class="underline"> R </span> 
+      178A7 <span class="underline"> y </span> 107E</p>
     </header>
     <body>
       <p>
@@ -48,7 +54,7 @@
       <a href="clink.html" target="_blank">Summer,</a><a href="clink.html" target="_blank"> & Fall </a></p>
     </body>
   <footer>
-    
+    <p> TWR </p>
   </footer>
 
 </html>
