--- a/clink.html
+++ b/clink.html
@@ -38,7 +38,7 @@
     </style>
   </head>
   <header>
-    <p>re: Tech Finance & Health enthusiast </p>
+    <p>... re: Tech, Finance, & Health enthusiast ...</p>
   </header>
 <body>
   <img src="flower$.jpeg" alt+"sumnSofar" class="pfp"></img>
