--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
       body {
         text-align: center;
         font-family: "Fantasy", "Roboto", "Oswald";
-        background-color: #A9A9A9;
+        background-color: #654321;
         padding-top: 5vh;
         padding-bottom: 15vh;
       }
       header {
         text-align: center;
         font-family: "Times", "arial", "serif";
-        background-color: #B2BEB5;
+        background-color: #A9A9A9;
         height: 8vh;
         width: 100%;
         position: fixed;
@@ -23,7 +23,7 @@
       footer {
         text-align: center;
         font-family: "Times", "Sans-serif", "arial";
-        background-color:#654321;
+        background-color:#B2BEB5;
         width: 100%;
         height: 15vh;
         position: fixed;
@@ -34,12 +34,14 @@
       }
       .underline {
         text-decoration: underline;
-        text-decoration-color: gold;
+        text-decoration-color: #654321;
         text-decoration-thickness: from-font;
       }
     </style>
   </head>
     <header>
+      <br>
+      <br>
     <p> 81089FBF92<span class="underline"> f </span>
       C26CA186B <span class="underline"> L </span>
       701F0F50B784 <span class="underline"> o </span> 
@@ -54,7 +56,7 @@
       <a href="clink.html" target="_blank">Summer,</a><a href="clink.html" target="_blank"> & Fall </a></p>
     </body>
   <footer>
-    <p> TWR </p>
+    <p> tarifrose14@gmail.com ~ TWR ~ rosefinance2020@gmail.com</p>
   </footer>
 
 </html>
