--- a/clink.html
+++ b/clink.html
@@ -16,7 +16,7 @@
         background-color: #D3D3D3;
         height: 5vh;
         width: 100%;
-        position: fixed;
+        position: relative;
         top: 0;
       }
       footer {
@@ -31,7 +31,7 @@
         color: olive;
       }
       .pfp{
-        width: 300px;
+        width: 500px;
         border-radius: 10px;
         border: 5px black:
       }
@@ -43,4 +43,5 @@
 <body>
   <img src="flower$.jpeg" alt+"sumnSofar" class="pfp"></img>
 </body>
+  <footer></footer>
 </html>
