--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         background-color:#B2BEB5;
         width: 100%;
         height: 15vh;
-        position: fixed;
+        position: relative;
         bottom: 0;
       }
       a {
@@ -40,8 +40,6 @@
     </style>
   </head>
     <header>
-      <br>
-      <br>
     <p> 81089FBF92<span class="underline"> f </span>
       C26CA186B <span class="underline"> L </span>
       701F0F50B784 <span class="underline"> o </span> 
@@ -51,6 +49,8 @@
       178A7 <span class="underline"> y </span> 107E</p>
     </header>
     <body>
+      <br>
+      <br>
       <p>
       <a href= "clink.html" target="_blank">Winter </a><a href="clink.html" target="_blank">Spring;</a> 
       <a href="clink.html" target="_blank">Summer,</a><a href="clink.html" target="_blank"> & Fall </a></p>
