--- a/clink.html
+++ b/clink.html
@@ -13,7 +13,7 @@
       }
       header {
         font-family: "Times", "arial", "serif";
-        background-color: #D3D3D3;
+        background-color:  #A9A9A9;
         height: 5vh;
         width: 100%;
         position: relative;
