--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         background-color: #654321;
         padding-top: 5vh;
         padding-bottom: 15vh;
+        min-height: 100vh;
       }
       header {
         text-align: center;
         font-family: "Times", "arial", "serif";
-        background-color: #A9A9A9;
+        background-color: #B2BEB5;
         height: 8vh;
         width: 100%;
         position: fixed;
@@ -23,7 +24,7 @@
       footer {
         text-align: center;
         font-family: "Times", "Sans-serif", "arial";
-        background-color:#B2BEB5;
+        background-color:#A9A9A9;
         width: 100%;
         height: 15vh;
         position: relative;
