--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         background-color:#A9A9A9;
         width: 100%;
         height: 15vh;
-        position: relative;
+        position: fixed;
         bottom: 0;
       }
       a {
