--- a/index.html
+++ b/index.html
@@ -38,16 +38,19 @@
         text-decoration-color: #654321;
         text-decoration-thickness: from-font;
       }
+      .big {
+        font-size: 150%;
+      }
     </style>
   </head>
     <header>
-    <p> 81089FBF92<span class="underline"> f </span>
-      C26CA186B <span class="underline"> L </span>
-      701F0F50B784 <span class="underline"> o </span> 
-      4F699E3B <span class="underline"> E </span> 
-      A7415C26 <span class="underline"> t </span> 
-      CFA2C281 <span class="underline"> R </span> 
-      178A7 <span class="underline"> y </span> 107E</p>
+    <p> 81089FBF92<span class="underline big"> f </span>
+      C26CA186B <span class="underline big"> L </span>
+      701F0F50B784 <span class="underline big"> o </span> 
+      4F699E3B <span class="underline big"> E </span> 
+      A7415C26 <span class="underline big"> t </span> 
+      CFA2C281 <span class="underline big"> R </span> 
+      178A7 <span class="underline big"> y </span> 107E</p>
     </header>
     <body>
       <br>
