--- a/clink.html
+++ b/clink.html
@@ -34,6 +34,7 @@
         width: 500px;
         border-radius: 10px;
         border: 5px black:
+        box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       }
     </style>
   </head>
