--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         text-decoration-thickness: from-font;
       }
       .big {
-        font-size: 150%;
+        font-size: 170%;
+        color: green;
       }
     </style>
   </head>
