--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <br>
       <p>
       <a href= "clink.html" target="_blank">Winter </a><a href="clink.html" target="_blank">Spring;</a> 
-      <a href="clink.html" target="_blank">Summer,</a><a href="clink.html" target="_blank"> & Fall </a></p>
+      <a href="clink.html" target="_blank">Summer,</a><a href="squidword.html" target="_blank"> & Fall </a></p>
     </body>
   <footer>
     <p> tarifrose14@gmail.com ~ TWR ~ rosefinance2020@gmail.com</p>
