--- a/squidword.html
+++ b/squidword.html
@@ -42,7 +42,7 @@
    
   </header>
 <body>
-  <img src="sM.html" alt+"sub" class="pic"></img>
+  <img src="sM.png" alt+"sub" class="pic"></img>
 </body>
   <footer></footer>
 </html>
