--- a/clink.html
+++ b/clink.html
@@ -31,7 +31,7 @@
         color: olive;
       }
       .pfp{
-        width: 500px;
+        width: 40%vw;
         border-radius: 10px;
         border: 5px black:
         box-shadow: 0 4px 10px rgba(0,0,0,0.3);
