--- a/squidword.html
+++ b/squidword.html
@@ -31,7 +31,7 @@
         color: olive;
       }
       .pic{
-        width: 500px;
+        width: 45%vw;
         border-radius: 10px;
         border: 5px black:
         box-shadow: 0 4px 10px rgba(0,0,0,0.3);
