--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       <br>
       <br>
       <p>
-      <a href= "clink.html" target="_blank">Winter </a><a href="clink.html" target="_blank">Spring;</a> 
-      <a href="clink.html" target="_blank">Summer,</a><a href="squidword.html" target="_blank"> & Fall </a></p>
+      <a href= "clink.html" target="_blank">Winter </a><a href="squidword.html" target="_blank">Spring;</a> 
+      <a href="clink.html" target="_blank">Summer,</a><a href="alt.html" target="_blank"> & Fall </a></p>
     </body>
   <footer>
-    <p> tarifrose14@gmail.com ~ TWR ~ rosefinance2020@gmail.com</p>
+    <p> tarifrose14@gmail.com ~ <a href="https://tarifrose.github.io/aWebsite" taregt="_blank">TWR</a> ~ rosefinance2020@gmail.com</p>
   </footer>
 
 </html>
