--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
         font-size: 170%;
         color: olive;
       }
+      .r{
+        color: red;
+      }
+      .g{
+        color: green;
+      }
+      .w{
+        color: white;
+      }
+      .t{
+        color: teal;
+      }
     </style>
   </head>
     <header>
@@ -57,8 +69,10 @@
       <br>
       <br>
       <p>
-      <a href= "clink.html" target="_blank">Winter </a><a href="squidword.html" target="_blank">Spring;</a> 
-      <a href="clink.html" target="_blank">Summer,</a><a href="alt.html" target="_blank"> & Fall </a></p>
+        <span class="w"><a href= "clink.html" target="_blank">Winter </a> </span>
+        <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span>
+        <span class="r"><a href="clink.html" target="_blank">Summer,</a></span>
+        <span class= "t"><a href="alt.html" target="_blank"> & Fall </a></span></p>
     </body>
   <footer>
     <p> tarifrose14@gmail.com ~ <a href="https://tarifrose.github.io/aWebsite" taregt="_blank">TWR</a> ~ rosefinance2020@gmail.com</p>
