--- a/clink.html
+++ b/clink.html
@@ -40,6 +40,8 @@
   </head>
   <header>
     <p>... re: Tech, Finance, & Health enthusiast ...</p>
+    <br>
+    <p>i "This a way" i1 "That a way" i2 "through canals &" U "alley wayz" </p>
   </header>
 <body>
   <img src="flower$.jpeg" alt+"sumnSofar" class="pfp"></img>
