--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <p>
         <span class="w"><a href= "clink.html" target="_blank">Winter </a> </span>
         <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span>
-        <span class="r"><a href="clink.html" target="_blank">Summer,</a></span>
+        <span class="r"><a href="?kneeTree.html" target="_blank">Summer,</a></span>
         <span class= "t"><a href="alt.html" target="_blank"> & Fall </a></span></p>
     </body>
   <footer>
