--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>  
     <meta charset= "UTF-8">
-    <meta name="viewport" content="width=device-width", intial-scale="1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> The Reef </title>
     <style>
       body {
@@ -56,6 +56,7 @@
       }
     </style>
   </head>
+  <body>
     <header>
     <p> 81089FBF92<span class="underline big"> f </span>
       C26CA186B <span class="underline big"> L </span>
@@ -65,7 +66,7 @@
       CFA2C281 <span class="underline big"> R </span> 
       178A7 <span class="underline big"> y </span> 107E</p>
     </header>
-    <body>
+    
       <br>
       <br>
       <p>
@@ -73,9 +74,9 @@
         <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span>
         <span class="r"><a href="?kneeTree.html" target="_blank">Summer,</a></span>
         <span class= "t"><a href="alt.html" target="_blank"> & Fall </a></span></p>
-    </body>
+    
   <footer>
-    <p> tarifrose14@gmail.com ~ <a href="https://tarifrose.github.io/aWebsite" taregt="_blank">TWR</a> ~ rosefinance2020@gmail.com</p>
+    <p> tarifrose14@gmail.com ~ <a href="https://tarifrose.github.io/aWebsite" target="_blank">TWR</a> ~ rosefinance2020@gmail.com</p>
   </footer>
-
+  </body>
 </html>
