Update and rename ?kneeTree.html to kneeTree.html
typos

--- a/kneeTree.html
+++ b/kneeTree.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name=viewport content="width=device-width", iniial-scale="1.0">
+    <meta name=viewport content="width=device-width, iniial-scale=1.0">
     <title> loadScreen </title>
     <style>
       body{
@@ -15,13 +15,11 @@
         color:olive;}
     </style>
   </head>
+  <body>
   <header>
     <p>Happy BHM</p>
   </header>
-  <body>
-    
-  </body>
   <footer>
-    
   </footer>
+  </body>
 </html>
