--- a/index.html
+++ b/index.html
@@ -42,23 +42,16 @@
         font-size: 170%;
         color: olive;
       }
-      .r{
-        color: red;
-      }
-      .g{
-        color: green;
-      }
-      .w{
-        color: white;
-      }
-      .t{
-        color: teal;
-      }
+      .r{color: red;}
+      .g{olor: green;}
+      .w{color: white;}
+      .t{color: teal;}
     </style>
   </head>
   <body>
     <header>
-    <p> 81089FBF92<span class="underline big"> f </span>
+    <p>
+      81089FBF92<span class="underline big"> f </span>
       C26CA186B <span class="underline big"> L </span>
       701F0F50B784 <span class="underline big"> o </span> 
       4F699E3B <span class="underline big"> E </span> 
@@ -72,7 +65,7 @@
       <p>
         <span class="w"><a href= "clink.html" target="_blank">Winter </a> </span>
         <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span>
-        <span class="r"><a href="?kneeTree.html" target="_blank">Summer,</a></span>
+        <span class="r"><a href="kneeTree.html" target="_blank">Summer,</a></span>
         <span class= "t"><a href="alt.html" target="_blank"> & Fall </a></span></p>
     
   <footer>
