--- a/kneeTree.html
+++ b/kneeTree.html
@@ -5,10 +5,10 @@
     <title> loadScreen </title>
     <style>
       body{
-        background-color:white;
+        background-color:black;
         text-align: center;}
       header{
-        background-color:black;}
+        background-color:grey;}
       footer{
         background-color:grey;}
       a{
