--- a/alt.html
+++ b/alt.html
@@ -30,6 +30,17 @@
       a {
         color: olive;
       }
+      .pulse{
+        animation: pulse 3s infinite;
+      }
+      @keyframes pulse {
+        0%{transform: scale(1);
+          }
+        50%{transform; scale(1.15);
+           }
+        100%{transform: scale(1);
+            }
+      }
       .pic{
         width: 20%vw;
         border-radius: 10px;
@@ -41,7 +52,7 @@
 <body> 
   <header>
   </header>
-  <img src="crater.png" alt+"hmm" class="pic"></img>
+  <img src="crater.png" alt+"hmm" class="pic pulse"></img>
   <footer></footer>
 </body>
 </html>
