--- a/clink.html
+++ b/clink.html
@@ -23,8 +23,8 @@
         font-family: "Times", "Sans-serif", "arial";
         background-color: #A9A9A9;
         width: 100%;
-        height: 15vh;
-        position: fixed;
+        height: 10vh;
+        position: relative;
         bottom: 0;
       }
       a {
