--- a/clink.html
+++ b/clink.html
@@ -31,10 +31,12 @@
         color: olive;
       }
       .pfp{
-        width: 20%vw;
+        width: 20vw;
         border-radius: 10px;
-        border: 5px black:
+        border: 5px black;
         box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+        margin-top: 3vh;
+        margin-bottom: 3vh;
       }
     </style>
   </head>
@@ -45,7 +47,7 @@
     
   </header>
 
-  <img src="flower$.jpeg" alt+"sumnSofar" class="pfp"></img>
+  <img src="flower$.jpeg" alt="sumnSofar" class="pfp">
   <footer></footer>
   </body>
 </html>
