--- a/alt.html
+++ b/alt.html
@@ -33,7 +33,7 @@
       .pulse{
         animation: pulse 3s infinite;
       }
-      @keyframes pulse {
+      @keyframes pulse{
         0%{transform: scale(1);
           }
         50%{transform; scale(1.15);
@@ -52,7 +52,7 @@
 <body> 
   <header>
   </header>
-  <img src="crater.png" alt+"hmm" class="pic pulse"></img>
+  <img src="crater.png" alt="hmm" class="pic pulse">
   <footer></footer>
 </body>
 </html>
