--- a/squidword.html
+++ b/squidword.html
@@ -2,7 +2,7 @@
   <head> 
     <meta charset= "UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>  sensor </title>
+    <title> sensor </title>
     <style>
       body {
         text-align: center;
@@ -41,7 +41,7 @@
 <body> 
   <header>
   </header>
-  <img src="sM.png" alt+"sub" class="pic"></img>
+  <img src="sM.png" alt="marineBubble" class="pic">
   <footer></footer>
 </body>
 </html>
