--- a/alt.html
+++ b/alt.html
@@ -36,7 +36,7 @@
       @keyframes pulse{
         0%{transform: scale(1);
           }
-        50%{transform; scale(1.15);
+        50%{transform: scale(1.15);
            }
         100%{transform: scale(1);
             }
@@ -51,6 +51,7 @@
   </head>
 <body> 
   <header>
+    <p> ... </p>
   </header>
   <img src="crater.png" alt="hmm" class="pic pulse">
   <footer></footer>
