--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
       <br>
       <br>
       <p>
-        <span class="w"><a href= "clink.html" target="_blank">Winter </a> </span>
-        <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span>
-        <span class="r"><a href="kneeTree.html" target="_blank">Summer,</a></span>
-        <span class= "t"><a href="alt.html" target="_blank"> & Fall </a></span></p>
+        <span class="w"><a href= "clink.html" target="_blank">Winter </span>
+        <span class="g"><a href="squidword.html" target="_blank">Spring;</span>
+        <span class="r"><a href="kneeTree.html" target="_blank">Summer,</span>
+        <span class= "t"><a href="alt.html" target="_blank"> & Autumn</span></p>
     
   <footer>
     <p> tarifrose14@gmail.com ~ <a href="https://tarifrose.github.io/aWebsite" target="_blank">TWR</a> ~ rosefinance2020@gmail.com</p>
