--- a/clink.html
+++ b/clink.html
@@ -24,7 +24,7 @@
         background-color: #A9A9A9;
         width: 100%;
         height: 10vh;
-        position: relative;
+        position: fixed;
         bottom: 0;
       }
       a {
