--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         background-color:#A9A9A9;
         height: 8vh;
         width: 100%;
-        position: fixed;
+        position: relative;
         top: 0;
       }
       footer {
@@ -43,7 +43,7 @@
         color: olive;
       }
       .r{color: red;}
-      .g{olor: green;}
+      .g{color: green;}
       .w{color: white;}
       .t{color: teal;}
     </style>
@@ -61,10 +61,10 @@
     </header>
       <br>
       <p>
-        <span class="w"><a href= "clink.html" target="_blank">Winter </span>
-        <span class="g"><a href="squidword.html" target="_blank">Spring;</span>
-        <span class="r"><a href="kneeTree.html" target="_blank">Summer,</span>
-        <span class= "t"><a href="alt.html" target="_blank"> & Autumn</span></p>
+        <span class="w"><a href= "clink.html" target="_blank">Winter </a></span>
+        <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span>
+        <span class="r"><a href="kneeTree.html" target="_blank">Summer,</a></span>
+        <span class= "t"><a href="alt.html" target="_blank"> & Autumn</a></span></p>
   <footer>
     <p> tarifrose14@gmail.com ~ <a href="https://tarifrose.github.io/aWebsite" target="_blank">TWR ~ rosefinance2020@gmail.com</p>
   </footer>
