--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <span class="r"><a href="kneeTree.html" target="_blank">Summer,</a></span>
         <span class= "t"><a href="alt.html" target="_blank"> & Autumn</a></span></p>
   <footer>
-    <p> tarifrose14@gmail.com ~ <a href="https://tarifrose.github.io/aWebsite" target="_blank">TWR ~ rosefinance2020@gmail.com</p>
+    <p> tarifrose14@gmail.com ~ <a href="https://tarifrose.github.io/aWebsite" target="_blank">TWR </a>~ rosefinance2020@gmail.com</p>
   </footer>
   </body>
 </html>
