--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         bottom: 0;
       }
       a {
-        color: black;
+        color: inherit;
       }
       .underline {
         text-decoration: underline;
