--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         font-size: 170%;
         color: olive;
       }
-      .r{color: red;}
-      .g{color: green;}
-      .w{color: white;}
+      .r{color: crimson;}
+      .g{color: olive;}
+      .w{color: grey;}
       .t{color: teal;}
     </style>
   </head>
