--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     </header>
       <br>
       <p>
-        <span class="w"><a href= "clink.html" target="_blank">Winter </a></span>
-        <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span>
-        <span class="r"><a href="kneeTree.html" target="_blank">Summer,</a></span>
-        <span class= "t"><a href="alt.html" target="_blank"> & Autumn</a></span></p>
+        <span class="w"><a href= "clink.html" target="_blank">                   Winter </a></span><br>
+        <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span><br><br>
+        <span class="r"><a href="kneeTree.html" target="_blank">          Summer,</a></span><br><br><br>
+        <span class= "t"><a href="alt.html" target="_blank">                    & Autumn</a></span></p>
   <footer>
     <p> tarifrose14@gmail.com ~ <a href="https://tarifrose.github.io/aWebsite" target="_blank">TWR </a>~ rosefinance2020@gmail.com</p>
   </footer>
