--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
       .g{color: olive;}
       .w{color: grey;}
       .t{color: teal;}
+      .compass{    
+        width: 12.5vw;
+        border-radius: 10px;
+        border: 5px black;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+        margin-top: 1.5vh;
+        margin-bottom: 1.5vh;  
+      }
     </style>
   </head>
   <body>
@@ -63,6 +71,7 @@
       <p>
         <span class="w"><a href= "clink.html" target="_blank">Winter </a></span><br>
         <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span>
+        <img src="nav.png" alt= "idkYet" class="compass">
         <span class="r"><a href="kneeTree.html" target="_blank">Summer,</a></span><br>
         <span class= "t"><a href="alt.html" target="_blank">& Autumn</a></span></p>
   <footer>
