--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       .g{color: olive;}
       .w{color: grey;}
       .t{color: teal;}
-      .compass{    
+      .ad{    
         width: 12.5vw;
         border-radius: 10px;
         border: 5px black;
@@ -71,7 +71,7 @@
       <p>
         <span class="w"><a href= "clink.html" target="_blank">Winter </a></span><br>
         <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span>
-        <img src="nav.png" alt= "idkYet" class="compass">
+        <img src="banner.png" alt= "YT:Rose Finance  Tiktok:  Twitch:tztoolbox" class="ad">
         <span class="r"><a href="kneeTree.html" target="_blank">Summer,</a></span><br>
         <span class= "t"><a href="alt.html" target="_blank">& Autumn</a></span></p>
   <footer>
