--- a/portal.html
+++ b/portal.html
@@ -45,7 +45,7 @@
   <header>
     <p>... re: Tech, Finance, & Health enthusiast ...</p>
   </header>
-    <audio id="player" src="Loves(')Time.1.m4a" controls autoplay loop></audio>
+    <audio id="player" src="Loves_Time_shortened.mp3" controls autoplay loop></audio>
     <button id="muteBtn">Mute</button>
     <script>
       const audio = document.getElementById('player');
