--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </header>
       <br>
       <p>
-        <span class="w"><a href= "portal.html" target="_blank">Winter </a></span><br>
+        <span class="w"><a href= "portal.html" target="_blank">Winter♬ </a></span><br>
         <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span>
         <img src="banner.png" alt= "YT:Rose Finance  Tiktok:  Twitch:tztoolbox" class="ad">
         <span class="r"><a href="kneeTree.html" target="_blank">Summer,</a></span><br>
