--- a/alt.html
+++ b/alt.html
@@ -44,16 +44,37 @@
       .pic{
         width: 20%vw;
         border-radius: 10px;
-        border: 5px black:
+        border: 5px black;
         box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      }
+      } 
     </style>
   </head>
 <body> 
   <header>
-    <p> ... </p>
+    <p> Bot Venting Machine </p>
   </header>
   <img src="crater.png" alt="hmm" class="pic pulse">
+  <!-- random choice selector  --- mind browser permissions -->
+  <p>hello World</p><br>
+  <!--        to move 
+
+  <script> fetch(skeleton)
+  </script>
+  .key{
+        const a = ["g", "e", "r", "c", "o", "d", "x", "l"]; 
+        g="https://www.github.com/";
+        e="https://www.gemini.com/";
+        r="https://www.grok.com/";
+        c="https://www.chatgpt.com/";
+        o="https://www.copilot.com/";
+        d="https://www.deepseek.com/";
+        x="https://www.x.com/";
+        l="https://www.leo.com/";
+      }
+      .skeleton{
+        
+      }
+  -->
   <footer></footer>
 </body>
 </html>
