--- a/kneeTree.html
+++ b/kneeTree.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name=viewport content="width=device-width, iniial-scale=1.0">
-    <title> loadScreen </title>
+    <title> thought </title>
     <style>
       body{
         background-color:black;
@@ -17,8 +17,9 @@
   </head>
   <body>
   <header>
-    <p>Happy BHM</p>
+    <p>What's Goin On</p>
   </header>
+    <p>Happy BHM</p>
   <footer>
   </footer>
   </body>
