--- a/alt.html
+++ b/alt.html
@@ -67,7 +67,6 @@
         d:"https://www.deepseek.com", 
         x:"https://www.x.com", 
         l:"https://www.leo.com"];
-    
     function skeleton() = {
       const code = Object.values(key);
       returm code[Math.floor(Math.random() * key.length)];}
@@ -77,6 +76,9 @@
       window.location.href = (skeletonKey);});
       });
   </script>
-  <footer></footer>
+  <br><p> try gemini </p>
+  <footer>
+    <a href="https://youtube.com/shorts/f0Pta3La5kM?si=Y8QaHE0-M28jxJ9H" target="_blank">aShort Vid </a>
+  </footer>
 </body>
 </html>
