--- a/alt.html
+++ b/alt.html
@@ -76,7 +76,7 @@
       window.location.href = (skeletonKey);});
       });
   </script>
-  <br><p> try gemini </p>
+  <br><a href = "https://copilot.microsoft.com/conversations/join/KN5K7GjMwRcyd16497o52" target= "_blank"> try copilot </a>
   <footer>
     <a href="https://youtube.com/shorts/f0Pta3La5kM?si=Y8QaHE0-M28jxJ9H" target="_blank">aShort Vid </a>
   </footer>
