--- a/alt.html
+++ b/alt.html
@@ -57,6 +57,7 @@
   <!-- random ai site choice selector  --- mind browser permissions -->
   <br><p>hello World</p><br>
   <button id="bot">Need Something?</button>
+  <!--non functional script below -->
   <script>
     const key =
         g:"https://www.github.com/", 
@@ -76,7 +77,9 @@
       window.location.href = (skeletonKey);});
       });
   </script>
-  <br><a href = "https://copilot.microsoft.com/conversations/join/KN5K7GjMwRcyd16497o52" target= "_blank"> try copilot </a>
+  <br>
+  <!-- fin. -->
+  <a href = "https://copilot.microsoft.com/conversations/join/KN5K7GjMwRcyd16497o52" target= "_blank"> try copilot </a>
   <footer>
     <a href="https://youtube.com/shorts/f0Pta3La5kM?si=Y8QaHE0-M28jxJ9H" target="_blank">aShort Vid </a>
   </footer>
