--- a/index.html
+++ b/index.html
@@ -46,14 +46,6 @@
       .g{color: olive;}
       .w{color: grey;}
       .t{color: teal;}
-      .ad{    
-        width: 12.5vw;
-        border-radius: 10px;
-        border: 5px black;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-        margin-top: 1.5vh;
-        margin-bottom: 1.5vh;  
-      }
     </style>
   </head>
   <body>
@@ -65,7 +57,8 @@
       4F699E3B <span class="underline big"> E </span> 
       A7415C26 <span class="underline big"> t </span> 
       CFA2C281 <span class="underline big"> R </span> 
-      178A7 <span class="underline big"> y </span> 107E</p>
+      178A7 <span class="underline big"> y </span> 107E</p><br>
+      <a href="fundraiser.html" target="_blank">Donate here</a>
     </header>
       <br>
       <p>
@@ -73,7 +66,7 @@
         <span class="g"><a href="squidword.html" target="_blank">Spring;</a></span>
         <img src="banner.png" alt= "YT:Rose Finance  Tiktok:  Twitch:tztoolbox" class="ad">
         <span class="r"><a href="kneeTree.html" target="_blank">Summer,</a></span><br>
-        <span class= "t"><a href="alt.html" target="_blank">& Autumn</a></span></p>
+        <span class= "t"><a href="aicalculator.html" target="_blank">& Autumn</a></span></p>
   <footer>
     <p> tarifrose14@gmail.com ~ <a href="https://tarifrose.github.io/aWebsite" target="_blank">TWR </a>~ rosefinance2020@gmail.com</p>
   </footer>
