--- a/kneeTree.html
+++ b/kneeTree.html
@@ -5,14 +5,31 @@
     <title> thought </title>
     <style>
       body{
-        background-color:black;
-        text-align: center;}
-      header{
-        background-color:grey;}
-      footer{
-        background-color:grey;}
+        text-align: center;
+        font-family: "Times", "arial", "serif";
+        background-color: #3F00FF;
+        height: 8vh;
+        width: 100%;
+        position: relative;
+        top: 0;}
+      header{ 
+        text-align: center;
+        font-family: "Times", "arial", "serif";
+        background-color: black;
+        height: 8vh;
+        width: 100%;
+        position: relative;
+        top: 0;}
+      footer{ 
+        text-align: center;
+        font-family: "Times", "arial", "serif";
+        background-color: black;
+        height: 8vh;
+        width: 100%;
+        position: relative;
+        top: 0;}
       a{
-        color:olive;}
+        color: green;}
     </style>
   </head>
   <body>
