--- a/squidword.html
+++ b/squidword.html
@@ -41,7 +41,7 @@
 <body> 
   <header>
   </header>
-  <img src="bell.png" alt="Tacos" class="pic">
-  <footer><p>why was the bends coined?</footer>
+  <img src="cert.png" alt="404" class="pic">
+  <footer></footer>
 </body>
 </html>
