--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       A7415C26 <span class="underline big"> t </span> 
       CFA2C281 <span class="underline big"> R </span> 
       178A7 <span class="underline big"> y </span> 107E</p><br>
-      <a href="fundraiser.html" target="_blank">Donate here</a>
+      <a href="fundraiser.html" target="_blank">Donate here</a><br>
     </header>
       <br>
       <p>
